--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Natchanon's Profile</h1>
+    <h2>About Me</h2>
+    <p>I'm a student of Bangkok University.</p>
 </body>
 </html>
