--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Natchanon's Profile</h1>
     <h2>About Me</h2>
     <p>I'm a student of Bangkok University.</p>
+    <footer>Contact Me: natchanon.sirim@bumail.com</footer>
 </body>
 </html>
