--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Natchanon's Profile</h1>
     <h2>About Me</h2>
     <p>I'm a student of Bangkok University.</p>
+    <img src="ME.jpg" height="480" width="480">
 </body>
 </html>
